[package]
name = "deboa"
version = "0.1.0-beta.16"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A friendly rest client on top of hyper."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
  "tokio-rt",
  "http2",
  "tokio-rust-tls",
  "default-rustls-provider",
  "default-rustls-verifier",
]

# runtimes
tokio-rt = [
  "tokio/fs",
  "tokio/macros",
  "quinn/runtime-tokio",
  "tokio-util/io",
  "rt-gate/tokio-rt",
  "hyper-util/tokio",
  "hyper-body-utils/tokio-rt",
  "trust-dns-resolver/tokio-runtime",
  #1 Comment out line below before publish to crates.io
  "deboa-tests/tokio-rt",
]

smol-rt = [
  "dep:smol",
  "smol-hyper/smol",
  "dep:async-executor",
  "dep:smol-macros",
  "dep:macro_rules_attribute",
  "quinn/runtime-smol",
  "rt-gate/smol-rt",
  "hyper-body-utils/smol-rt",
  "dep:trust-dns-resolver",
  "async-std-resolver",
  #1
  "deboa-tests/smol-rt",
]

# compio-rt = [
#   "compio/macros",
#   "compio/io-compat",
#   "compio/io-uring",
#   "compio/net",
#   "compio/tls",
#   "dep:compio-io",
#   "dep:compio-fs",
#   "dep:futures-util",
#   "send_wrapper/futures",
#   "rt-gate/compio-rt",
#   "hyper-body-utils/compio-rt",
# ]

# tls
tokio-rust-tls = [
  "dep:rustls",
  "dep:rustls-native-certs",
  "dep:tokio-rustls",
  "dep:rustls-pki-types",
  #1
  "deboa-tests/tokio-rust-tls",
]

smol-rust-tls = [
  "dep:rustls",
  "dep:rustls-native-certs",
  "dep:futures-rustls",
  "dep:rustls-pki-types",
  #1
  "deboa-tests/smol-rust-tls",
]

# compio-rust-tls = [
#   "dep:rustls",
#   "dep:rustls-native-certs",
#   "dep:futures-rustls",
#   "dep:webpki-roots",  
#   "rustls-provider",
#   "compio-tls/rustls",
# ]

webpki-rustls-verifier = ["__webpki_rustls_verifier"]
platform-rustls-verifier = ["__platform_rustls_verifier"]

default-rustls-verifier = ["__webpki_rustls_verifier"]
__webpki_rustls_verifier = ["dep:webpki-roots"]
__platform_rustls_verifier = ["dep:rustls-platform-verifier"]

# rustls providers
no-provider = []
aws-lc-rustls-provider = ["__rustls_aws_lc_rs"]
ring-rustls-provider = ["__rustls_ring"]
rustcrypto-rustl-provider = ["__rustls_rustcrypto"]

default-rustls-provider = ["__rustls_aws_lc_rs"]
__rustls_aws_lc_rs = [
  "futures-rustls/aws-lc-rs",
  #"tokio-rustls/aws-lc-rs",
  "quinn/rustls-aws-lc-rs",
]
__rustls_ring = [
  "futures-rustls/ring",
  #"tokio-rustls/ring",
  "quinn/rustls-ring",
]
__rustls_rustcrypto = ["dep:rustls-rustcrypto"]

# tls implementations
tokio-native-tls = [
  "async-native-tls/runtime-tokio",
  #1
  "deboa-tests/tokio-rust-tls",
]

smol-native-tls = [
  "async-native-tls/runtime-async-std",
  #1
  "deboa-tests/smol-rust-tls",
]

# compio-native-tls = [
#   "compio-tls/native-tsl",
#   "deboa-tests/compio-rust-tls",
# ]

# protocols
http1 = [
  "hyper/http1", 
  "hyper-util/http1", 
  #1
  "deboa-tests/http1"
]
http2 = [
  "hyper/http2", 
  "hyper-util/http2", 
  #1
  "deboa-tests/http2"
]
http3 = [
  "dep:h3",
  "dep:h3-quinn",
  "dep:quinn",
  "hyper-body-utils/http3",
  #1
  "deboa-tests/http3",
]

[dependencies]
async-executor = { version = "1.13.3", optional = true, default-features = false }
async-native-tls = { version = "0.5.0", optional = true, default-features = false }
async-std-resolver = { version = "=0.23.2", optional = true, default-features = false }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1.11", optional = false }
cfg-if = "1.0.4"
# compio = { git = "https://github.com/compio-rs/compio.git", optional = true, default-features = false }
# compio-io = { git = "https://github.com/compio-rs/compio.git", optional = true, default-features = false }
# compio-fs = { git = "https://github.com/compio-rs/compio.git", optional = true, default-features = false }
# compio-runtime = { git = "https://github.com/compio-rs/compio.git", optional = true, default-features = false }
# compio-tls = { git = "https://github.com/compio-rs/compio.git", optional = true, default-features = false }
cookie = "0.15.2"
futures = "0.3.31"
futures-rustls = { version = "0.26.0", optional = true, default-features = false }
futures-util = { version = "0.3.31", optional = true, default-features = false }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.8.1", features = ["client"], default-features = false }
hyper-body-utils = { version = "0.1.6-beta.6", optional = true, default-features = false }
hyper-util = { version = "0.1.20", features = [
  "client",
  "client-legacy",
], default-features = false }
indexmap = "2.11.4"
log = "0.4.28"
macro_rules_attribute = { version = "0.2.2", optional = true, default-features = false }
minimime = "1.0.0"
mockall = "0.14.0"
quinn = { version = "0.11.7", optional = true, default-features = false }
rand = "0.9.2"
regex = "1.9.6"
rt-gate = { version = "0.1.5", optional = true, default-features = false }
rustls = { version = "0.23.36", optional = true, default-features = false }
rustls-native-certs = { version = "0.8.0", optional = true, default-features = false }
rustls-pki-types = { version = "1.13.2", optional = true, default-features = false }
rustls-platform-verifier = { version = "0.6.2", optional = true, default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true, default-features = false }
send_wrapper = { version = "0.6.0", optional = true, default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
smol = { version = "2.0.2", optional = true, default-features = false }
smol-hyper = { version = "0.1.0", optional = true, default-features = false }
smol-macros = { version = "0.1.1", optional = true, default-features = false }
thiserror = "2.0.17"
time = "=0.2.27"
tokio = { version = "1.38.1", optional = true, default-features = false }
tokio-rustls = { version = "0.26.4", optional = true, default-features = false }
tokio-util = { version = "0.7.11", optional = true, default-features = false }
trust-dns-resolver = { version = "0.23.2", optional = true, default-features = false }
url = "2.5.8"
urlencoding = "2.1.3"
webpki-roots = { version = "1.0.6", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = [
  "html_reports",
  "async",
  "async_smol",
  "async_tokio",
] }
deboa-tests = { path = "../deboa-tests", version = "0.0.1", default-features = false }
futures-util = "0.3.31"
mime = { version = "0.3.17" }
multer = "3.1.0"
smol = "2.0.2"
tokio = { version = "1.49.0" }

[[bench]]
name = "benchmark"
harness = false
