[package]
name = "deboa"
version = "0.1.0-beta.16"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A friendly rest client on top of hyper."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
async-executor = { version = "1.13.3", optional = true, default-features = false }
async-std-resolver = { version = "=0.23.2", optional = true, default-features = false }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1.11" }
cfg-if = "1.0.4"
cookie = "0.15.2"
futures = "0.3.31"
futures-util = { version = "0.3.31", optional = true, default-features = false }
h3 = { version = "0.0.8", default-features = false }
h3-quinn = { version = "0.0.10", default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"], default-features = false }
hyper-body-utils = { path = "../../hyper-body-utils", default-features = false }
hyper-util = { version = "0.1.20", features = [
  "client",
  "client-legacy",
], default-features = false }
indexmap = "2.11.4"
log = "0.4.28"
macro_rules_attribute = { version = "0.2.2", optional = true, default-features = false }
minimime = "1.0.0"
mockall = "0.14.0"
quinn = { version = "0.11.7", optional = true, default-features = false }
rand = "0.9.2"
regex = "1.9.6"
send_wrapper = { version = "0.6.0", optional = true, default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.17"
time = "=0.2.27"
url = "2.5.8"
urlencoding = "2.1.3"
webpki-roots = { version = "1.0.6", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = [
  "html_reports",
  "async",
  "async_smol",
  "async_tokio",
] }
deboa-tests = { path = "../deboa-tests", version = "0.0.1", default-features = false }
futures-util = "0.3.31"
mime = { version = "0.3.17" }
multer = "3.1.0"
smol = "2.0.2"
tokio = { version = "1.49.0" }

[[bench]]
name = "benchmark"
harness = false
