[package]
name = "deboa"
version = "0.1.0-beta.18"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A friendly rest client on top of hyper."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1.11" }
cfg-if = "1.0.4"
cookie = "0.15.2"
futures = "0.3.31"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.10.1", features = ["client", "http1", "http2"], default-features = false }
hyper-body-utils = { version = "0.1.7" }
hyper-util = { version = "0.1.20", features = [
  "client",
  "client-legacy",
], default-features = false }
indexmap = "2.11.4"
log = "0.4.32"
minimime = "1.0.0"
mockall = "0.15.0"
rand = "0.10.1"
regex = "1.12.4"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.17"
time = "=0.2.27"
url = "2.5.8"
urlencoding = "2.1.3"

[dev-dependencies]
caramelo = "0.1.1-beta.3"
criterion = { version = "0.8.2", features = [
  "html_reports",
  "async",
  "async_smol",
  "async_tokio",
] }
futures-util = "0.3.31"
mime = { version = "0.3.17" }
multer = "3.1.0"
smol = "2.0.2"
tokio = { version = "1.49.0" }
