[package]
name = "vamo-macros"
edition = "2021"
version = "0.0.8"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
description = "Macros for quick client development using vamo"
license = "MIT"
repository = "https://github.com/ararog/deboa"
readme = "README.md"
keywords = ["compiler-plugin", "macros", "resources", "http", "rest"]
exclude = [".travis.yml"]
publish = true
rust-version = "1.75.0"

[features]
default = ["json", "tests", "_tokio-rt", "_http2", "_tokio-rust-tls"]

tests = []

# Serialization formats
json = ["deboa-extras/json"]
xml = ["deboa-extras/xml"]
msgpack = ["deboa-extras/msgpack"]

# For testing purposes (internal use only)
_tokio-rt = ["dep:tokio", "deboa-tests/tokio-rt"]
_smol-rt = ["dep:smol", "dep:smol-macros", "deboa-tests/smol-rt"]
_http1 = ["deboa-tests/http1"]
_http2 = ["deboa-tests/http2"]
_http3 = ["deboa-tests/http3"]
_tokio-rust-tls = ["deboa-tests/tokio-rust-tls"]
_smol-rust-tls = ["deboa-tests/smol-rust-tls"]
_tokio-native-tls = []
_smol-native-tls = []

[lib]
proc-macro = true

[dependencies]
deboa = { version = "0.1.0-beta.5" }
deboa-extras = { version = "0.0.8", path = "../deboa-extras", features=["json"] }
vamo = { version = "0.0.8", path = "../vamo" }
proc-macro2 = "1.0.103"
serde = "1.0.228"
syn = { version = "2.0", features = ["full"] }
quote = "1.0.41"
http = "1.4.0"
regex = "1.9.6"
titlecase = "2.2.1"
tokio = { version = "1.38.1", features = [
  "rt-multi-thread",
], default-features = false, optional = true }
smol = { version = "2.0.2", default-features = false, optional = true }
smol-macros = { version = "0.1.1", default-features = false, optional = true }

[dev-dependencies]
deboa-tests = { path = "../deboa-tests", version = "0.0.1" }
