[package]
name = "vamo-macros"
edition = "2021"
version = "0.0.9-beta.1"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
description = "Macros for quick client development using vamo"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ararog/deboa"
readme = "README.md"
keywords = ["compiler-plugin", "macros", "resources", "http", "rest"]
exclude = [".travis.yml"]
publish = true
rust-version = "1.75.0"

[features]
default = ["json"]

# Serialization formats
json = ["deboa-extras/json"]
xml = ["deboa-extras/xml"]
msgpack = ["deboa-extras/msgpack"]

[lib]
proc-macro = true

[dependencies]
deboa = { workspace = true, default-features = false }
deboa-extras = { workspace = true, default-features = false, optional = true }
vamo = { path = "../vamo" }
proc-macro2 = "1.0.103"
serde = "1.0.228"
syn = { version = "2.0", features = ["full"] }
quote = "1.0.41"
http = "1.4.0"
regex = "1.9.6"
titlecase = "2.2.1"

[dev-dependencies]
deboa-tokio = { workspace = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
