[package]
name = "vamo"
version = "0.0.8"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A rest wrapper for deboa http client."
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version = "1.75.0"

[features]
default = ["_tokio-rt", "_http2", "_tokio-rust-tls"]

# For testing purposes (internal use only)
_tokio-rt = ["dep:tokio", "deboa-tests/tokio-rt"]
_smol-rt = ["dep:smol", "dep:smol-macros", "deboa-tests/smol-rt"]
_http1 = ["deboa-tests/http1"]
_http2 = ["deboa-tests/http2"]
_http3 = ["deboa-tests/http3"]
_tokio-rust-tls = ["deboa-tests/tokio-rust-tls"]
_smol-rust-tls = ["deboa-tests/smol-rust-tls"]
_tokio-native-tls = []
_smol-native-tls = []

[dependencies]
base64 = "0.22.1"
deboa = { version = "0.1.0-beta.5" }
deboa-extras = { version = "0.0.8", path = "../deboa-extras", features = [
  "json",
] }
http = "1.4.0"
serde = "1.0.228"
url = "2.5.8"
tokio = { version = "1.38.1", features = [
  "rt-multi-thread",
], default-features = false, optional = true }
smol = { version = "2.0.2", default-features = false, optional = true }
smol-macros = { version = "0.1.1", default-features = false, optional = true }

[dev-dependencies]
deboa-tests = { path = "../deboa-tests", default-features = false, version = "0.0.1" }
