[package]
name = "vamo"
version = "0.0.9-beta.1"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A rest wrapper for deboa http client."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version = "1.75.0"

[features]
default = [
  "json",
  "tokio-rt",
  "http1",
  "tokio-rust-tls",
  "deboa/default-rustls-provider",
  "deboa/default-rustls-verifier",
]

json = ["deboa-extras/json"]

# For testing purposes (internal use only)
tokio-rt = [
  "deboa/tokio-rt", 
  "dep:tokio",
  #1 Comment out line below before publish to crates.io
  "deboa-tests/tokio-rt"
]
smol-rt = [
  "deboa/smol-rt", 
  "dep:smol", 
  "dep:smol-macros",
  #1 
  "deboa-tests/smol-rt"
]
#compio-rt = []
http1 = [
  "deboa/http1",
  #1 
  "deboa-tests/http1"
]
http2 = [
  "deboa/http2",
  #1
  "deboa-tests/http2"
]
http3 = [
  "deboa/http3", 
  #1
  "deboa-tests/http3"
]
tokio-rust-tls = [
  "deboa/tokio-rust-tls",
  #1
  "deboa-tests/tokio-rust-tls"
]
smol-rust-tls = [
  "deboa/smol-rust-tls", 
  #1
  "deboa-tests/smol-rust-tls"
]
# compio-rust-tls = [
#   "deboa/compio-rust-tls", 
#   "deboa-tests/compio-rust-tls"
# ]
tokio-native-tls = [
  "deboa/tokio-native-tls",
  #1 
  "deboa-tests/tokio-rust-tls"
]
smol-native-tls = [
  "deboa/smol-native-tls", 
  #1
  "deboa-tests/smol-rust-tls"
]
# compio-native-tls = [
#   "deboa/compio-native-tls", 
#   "deboa-tests/compio-rust-tls"
# ]

[dependencies]
base64 = "0.22.1"
deboa = { version = "0.1.0-beta.15", default-features = false, optional = true }
deboa-extras = { version = "0.0.9-beta.9", default-features = false, optional = true }
http = "1.4.0"
serde = "1.0.228"
smol = { version = "2.0.2", default-features = false, optional = true }
smol-macros = { version = "0.1.1", default-features = false, optional = true }
tokio = { version = "1.38.1", default-features = false, optional = true }
url = "2.5.8"

[dev-dependencies]
deboa-tests = { path = "../deboa-tests", default-features = false, version = "0.0.1" }
