[package]
name = "vamo"
version = "0.0.9-beta.1"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A rest wrapper for deboa http client."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version = "1.75.0"

[features]
default = [
  "json",
]

json = ["deboa-extras/json"]

[dependencies]
base64 = "0.22.1"
deboa = { workspace = true, default-features = false }
deboa-extras = { workspace = true, default-features = false }
http = "1.4.0"
serde = "1.0.228"
url = "2.5.8"

