[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
deboa = { path = "../../deboa" }
deboa-extras = { path = "../../deboa-extras" }
vamo = { path = "../../vamo" }
tokio = { version = "1.47.1", features = ["full"] }
http = { version = "1.3.1", optional = true }
serde = "1.0.226"
serde_json = "1.0.145"
