[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
deboa = { version = "0.1.0-beta.5" }
deboa-extras = { version = "0.0.8", path = "../../deboa-extras" }
vamo = { version = "0.0.8", path = "../../vamo" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"], default-features = false }
http = { version = "1.4.0" }
serde = "1.0.226"
serde_json = "1.0.145"
rayon = "1.11.0"


