[package]
name = "catcher"
version = "0.1.0"
edition = "2024"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
publish = false

[dependencies]
deboa = { path = "../../deboa" }
deboa-extras = { path = "../../deboa-extras", features = ["json"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.138"
async-trait = "0.1.89"
