[package]
name = "cbor"
version = "0.1.0"
edition = "2024"
authors = ["Kelvin Andrade <contato@kelvinandrade.com>"]
publish = false

[dependencies]
deboa = { version = "0.1.0-beta.5" }
deboa-extras = { version = "0.0.8", features = ["cbor"] }
ciborium = "0.2.2"
tokio = { version = "1" }
serde = { version = "1" }
