[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
deboa = { path = "../../deboa" }
deboa-extras = { path = "../../deboa-extras" }
iced = { version = "0.14.0", features = ["tokio", "debug"] }
sipper = "0.1.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }
