[package]
name = "postman"
version = "0.1.0"
edition = "2024"

[dependencies]
deboa = { path = "../../deboa", features = ["http1"] }
deboa-extras = { path = "../../deboa-extras" }
deboa-macros = { path = "../../deboa-macros" }
vamo = { path = "../../vamo" }
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.138"
http = "1.3.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"
