[package]
name = "simple-smol"
version = "0.0.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
publish = false

[dependencies]
deboa = { version = "0.1.0-beta.9", default-features = false, features = ["smol-rt", "http1", "http2", "smol-rust-tls"] }
deboa-extras = { version = "0.0.9-beta.5", default-features = false, features = ["smol-rt", "serialization"] }
smol = { version = "2.0.2" }
serde = "1.0.219"
serde_json = "1.0.138"
http = "1.4.0"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"
