[package]
name = "simple"
version = "0.0.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
publish = false

[dependencies]
deboa = { path = "../../deboa", features = ["http1"] }
deboa-extras = { path = "../../deboa-extras", features = ["json"] }
tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.138"
http = "1.3.1"
