[package]
name = "simple"
version = "0.0.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
publish = false

[dependencies]
deboa = { version = "0.1.0-beta.5", path = "../../deboa" }
deboa-extras = { version = "0.0.8", path = "../../deboa-extras", features = ["json"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.138"
http = "1.4.0"