[package]
name = "sse"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
deboa = { version = "0.0.6-beta.7", path = "../../deboa" }
deboa-extras = { version = "0.0.2-beta.1", path = "../../deboa-extras" }
eyre = "0.6.12"
futures = "0.3.31"
http = "1.3.1"
ratatui = "0.29.0"
serde = "1.0.228"
serde_json = "1.0.145"
textwrap = "0.16.2"
tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread"] }
tui-input = "0.14.0"
