[package]
name = "uget"
version = "0.0.4"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/deboa"
homepage = "https://github.com/ararog/deboa"
description = "A minimal cli tool to make http requests. You want, you get!"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "client", "fetch", "rest"]
publish = true
rust-version = "1.70.0"

[dependencies]
deboa = { path = "../../deboa", version = "0.0.6-beta.4" }
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
http = "1.3.1"
mime = "0.3.17"
