[package]
edition = "2024"
name = "bora"
version = "0.1.0"
authors = ["Rogerio Pacheco <rogerio.araujo@gmail.com>"]
description = "a procedural macro to generate deboa requests"
license = "MIT"
repository = "https://github.com/ararog/deboa"
readme = "README.md"
keywords = ["compiler-plugin"]
exclude = [".travis.yml"]

[lib]
proc-macro = true

[dependencies]
deboa = { path = "../../..", features = ["json", "tokio-rt", "http1"] }
proc-macro2 = "1.0.101"
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.219"
syn = "2.0.106"
quote = "1.0.40"
serde_tokenstream = "0.2.2"
maplit = "1.0.2"
proc-macro-error = "1.0.4"
regex = "1.11.2"
